# Recommandation_engine

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_workflow.py  vercel.json
api/: index.py  random_user.py
data/: Group6.xlsx
models/: item_based.py  popular.py  svd_model.py  user_based.py
services/: data_loader.py  embeddings_generator.py  ollama_service.py  product_service.py  search_service.py  sentiment.py  tags_generator.py  time_weighting.py
src/: App.jsx  index.css
src/components/: LoginDialog.jsx  OrderHistory.jsx  ProductCard.jsx  SearchBar.jsx  SimilarProductsModal.jsx
src/data/: mockData.js
src/pages/: Home.jsx
src/stores/: useGlobalStore.js
